@@ -22,7 +22,9 @@
 #include <Nux/Nux.h>
 #include <glib.h>
 #include <boost/noncopyable.hpp>
-#include <memory>
+#include <boost/shared_ptr.hpp>
+#include <boost/enable_shared_from_this.hpp>
+#include <boost/weak_ptr.hpp>
 
 #include "unity-mt-grab-handle.h"
 #include "unity-mt-texture.h"
@@ -35,12 +37,12 @@ namespace MT
 extern unsigned int FADE_MSEC;
 
 class GrabHandleGroup :
-  public std::enable_shared_from_this <GrabHandleGroup>,
+  public boost::enable_shared_from_this <GrabHandleGroup>,
   boost::noncopyable
 {
 public:
 
-  typedef std::shared_ptr <GrabHandleGroup> Ptr;
+  typedef boost::shared_ptr <GrabHandleGroup> Ptr;
 
   static GrabHandleGroup::Ptr create (GrabHandleWindow *owner,
                                       std::vector<TextureSize> &textures);
@@ -57,7 +59,7 @@ public:
 
   void hide();
   void show(unsigned int handles = ~0);
-  void raiseHandle (const std::shared_ptr <const unity::MT::GrabHandle> &);
+  void raiseHandle (const boost::shared_ptr <const unity::MT::GrabHandle> &);
 
   std::vector <TextureLayout> layout(unsigned int handles);
 
