@@ -21,8 +21,10 @@
 
 #include <Nux/Nux.h>
 #include <glib.h>
-#include <memory>
 #include <boost/noncopyable.hpp>
+#include <boost/shared_ptr.hpp>
+#include <boost/enable_shared_from_this.hpp>
+#include <boost/weak_ptr.hpp>
 
 #include "unity-mt-texture.h"
 #include "unity-mt-grab-handle-window.h"
@@ -77,17 +79,17 @@ static const std::map <int, unsigned int> handlesMask = {
 class GrabHandleGroup;
 
 class GrabHandle :
-  public std::enable_shared_from_this <GrabHandle>,
+  public boost::enable_shared_from_this <GrabHandle>,
   boost::noncopyable
 {
 public:
 
-  typedef std::shared_ptr <GrabHandle> Ptr;
+  typedef boost::shared_ptr <GrabHandle> Ptr;
 
   static GrabHandle::Ptr create (Texture::Ptr    texture,
                                  unsigned int    width,
                                  unsigned int    height,
-                                 const std::shared_ptr <GrabHandleGroup> &owner,
+                                 const boost::shared_ptr <GrabHandleGroup> &owner,
                                  unsigned int id);
   ~GrabHandle();
 
@@ -158,10 +160,10 @@ private:
   GrabHandle(Texture::Ptr    texture,
              unsigned int    width,
              unsigned int    height,
-             const std::shared_ptr <GrabHandleGroup> &owner,
+             const boost::shared_ptr <GrabHandleGroup> &owner,
              unsigned int id);
 
-  std::weak_ptr <GrabHandleGroup>      mOwner;
+  boost::weak_ptr <GrabHandleGroup>      mOwner;
   Texture::Ptr                           mTexture;
   unsigned int                           mId;
   nux::Geometry                          mRect;
