@@ -35,8 +35,7 @@ unity::MT::X11TextureFactory::setActiveWrap (const GLTexture::List &t)
 unity::MT::Texture::Ptr
 unity::MT::X11TextureFactory::create ()
 {
-  unity::MT::Texture::Ptr tp(static_cast<unity::MT::Texture*> (new unity::MT::X11Texture(mWrap)));
-  return tp;
+  return boost::shared_static_cast <unity::MT::Texture> (unity::MT::X11Texture::Ptr (new unity::MT::X11Texture (mWrap)));
 }
 
 unity::MT::X11Texture::X11Texture (const GLTexture::List &t)
@@ -152,7 +151,7 @@ unity::MT::X11GrabHandleImpl::buttonPress (int x,
 }
 
 void
-UnityMTGrabHandlesWindow::raiseGrabHandle (const std::shared_ptr <const unity::MT::GrabHandle> &h)
+UnityMTGrabHandlesWindow::raiseGrabHandle (const boost::shared_ptr <const unity::MT::GrabHandle> &h)
 {
   UnityMTGrabHandlesScreen::get (screen)->raiseHandle (h, window->frame ());
 }
@@ -203,7 +202,7 @@ sortPointers(void *p1, void *p2)
 }
 
 void
-UnityMTGrabHandlesScreen::raiseHandle (const std::shared_ptr <const unity::MT::GrabHandle> &h,
+UnityMTGrabHandlesScreen::raiseHandle (const boost::shared_ptr <const unity::MT::GrabHandle> &h,
                                        Window                                                owner)
 {
   for (const auto &pair : mInputHandles)
@@ -461,7 +460,7 @@ UnityMTGrabHandlesWindow::glDraw(const GLMatrix&            transform,
        * region */
       CompRegion reg = CompRegion(layout.second.x, layout.second.y, layout.second.width, layout.second.height);
 
-      for(GLTexture * tex : static_cast<unity::MT::X11Texture*>(layout.first.get())->get())
+      for(GLTexture * tex : boost::shared_static_cast <unity::MT::X11Texture> (layout.first)->get ())
       {
         GLTexture::MatrixList matl;
         GLTexture::Matrix     mat = tex->matrix();
@@ -778,7 +777,7 @@ UnityMTGrabHandlesScreen::UnityMTGrabHandlesScreen(CompScreen* s) :
     GLTexture::List t = GLTexture::readImageToTexture(fname, pname,
                                                       size);
 
-    (static_cast<unity::MT::X11TextureFactory*>(unity::MT::Texture::Factory::Default().get())->setActiveWrap(t));
+    (boost::shared_static_cast <unity::MT::X11TextureFactory> (unity::MT::Texture::Factory::Default ()))->setActiveWrap (t);
 
     mHandleTextures.at(i).first = unity::MT::Texture::Factory::Default ()->create ();
     mHandleTextures.at (i).second.width = size.width ();
