@@ -22,7 +22,9 @@
 #include <composite/composite.h>
 #include <opengl/opengl.h>
 #include <boost/noncopyable.hpp>
-#include <memory>
+#include <boost/shared_ptr.hpp>
+#include <boost/enable_shared_from_this.hpp>
+#include <boost/weak_ptr.hpp>
 
 #include <core/atoms.h>
 
@@ -70,7 +72,7 @@ class X11Texture :
 {
   public:
 
-    typedef std::shared_ptr <X11Texture> Ptr;
+    typedef boost::shared_ptr <X11Texture> Ptr;
 
     X11Texture (const GLTexture::List &t);
 
@@ -122,7 +124,7 @@ public:
 
 private:
 
-  std::weak_ptr <unity::MT::GrabHandle>  mGrabHandle;
+  boost::weak_ptr <unity::MT::GrabHandle>  mGrabHandle;
   Window                                   mIpw;
   Display                                  *mDpy;
 };
@@ -173,7 +175,7 @@ public:
   void preparePaint(int);
   void donePaint();
 
-  void raiseHandle (const std::shared_ptr <const unity::MT::GrabHandle> &,
+  void raiseHandle (const boost::shared_ptr <const unity::MT::GrabHandle> &,
                     Window                      owner);
 
   std::vector <unity::MT::TextureSize>  & textures()
@@ -186,7 +188,7 @@ private:
   std::list <unity::MT::GrabHandleGroup::Ptr> mGrabHandles;
   std::vector <unity::MT::TextureSize> mHandleTextures;
 
-  std::map <Window, const std::weak_ptr <unity::MT::GrabHandle> > mInputHandles;
+  std::map <Window, const boost::weak_ptr <unity::MT::GrabHandle> > mInputHandles;
   CompWindowVector         		    mLastClientListStacking;
   Atom             			    mCompResizeWindowAtom;
 
@@ -241,7 +243,7 @@ public:
 
 protected:
 
-  void raiseGrabHandle (const std::shared_ptr <const unity::MT::GrabHandle> &h);
+  void raiseGrabHandle (const boost::shared_ptr <const unity::MT::GrabHandle> &h);
   void requestMovement (int x,
                         int y,
                         unsigned int direction,
